<resources>
    <string name="zast1">Магия скоро начнется...</string>
    <string name="vxod1">Добро пожаловать в мистический мир!</string>
    <string name="vxod2">Имя пользователя/почта</string>
    <string name="vxod3">Пароль</string>
    <string name="vxod4">Войти</string>
    <string name="vxod5">Ещё нет аккаунта? Зарегистрируйтесь</string>

    <string name="reg1">Заполните форму)</string>
    <string name="reg2">Имя пользователя</string>
    <string name="reg3">Почта</string>
    <string name="reg4">Зарегистрироваться</string>
    <string name="reg5">Вернуться назад</string>

    <string name="gTaro1">Карты Таро</string>
    <string name="gTaro2">Открой мир тайн с картами Таро и узнай, что приготовил для тебя сегодняшний день.</string>
    <string name="gTaroB">Гадать</string>

    <string name="gHoroscope1">Гороскоп</string>
    <string name="gHoroscope2">Гороскоп подскажет, какие энергии влияют на вас сегодня и чего стоит ожидать.</string>
    <string name="gHoroscope3">Посмотреть</string>

    <string name="gMatrix1">Матрица Судьбы</string>
    <string name="gMatrix2">Матрица судьбы раскроет скрытые закономерности вашей жизни и поможет лучше понять себя.</string>
    <string name="gMatrix3">Рассчитать</string>

    <string name="gTest">Тесты</string>
    <string name="gTest2">Пройдите лёгкие тесты, чтобы лучше понять себя и раскрыть свои скрытые черты характера.</string>
    <string name="gTest3">Начать</string>

    <string name="gBall1">Магический шар</string>
    <string name="gBall2">Задайте вопрос, и магический шар ответит вам простым да или нет.</string>
    <string name="gBall3">Получить ответ</string>

    <string name="gCompatibility1">Совместимость</string>
    <string name="gCompatibility2">Расчёт покажет, насколько гармоничны ваши энергии с другим человеком.</string>
    <string name="gCompatibility3">Сравнить</string>

    <string name="gSolar1">Соляр</string>
    <string name="gSolar2">Соляр покажет основные события и энергии вашего личного года с момента дня рождения.</string>
    <string name="gSolar3">Посмотреть</string>

    <string name="lTitle">Search</string>
    <string name="l1"> Добро пожаловать в Библиотеку!Здесь собрано множество статей о магии и тайнах Вселенной.</string>

    <string name="A1"> Статья.</string>
    <string name="A2"> Добавить в избранное</string>

    <string name="taro1"> Гадание на Таро</string>
    <string name="taro2"> Таро - это колода карт, используемая для гадания, самопознания и анализа жизненных процессов через символику и архетипы.</string>
    <string name="tarok1"> Карта дня </string>
    <string name="tarok2"> Иногда мы так заняты планами и списками дел, что забываем прислушаться к себе. Эта карта — короткий разговор с вашей интуицией.</string>
    <string name="tarok3"> Вытянуть </string>
    <string name="taror1"> Расклад </string>
    <string name="taror2"> У вас есть вопрос, но нет ответа? Сделайте расклад. Карты не предсказывают — они показывают возможный путь.</string>
    <string name="taror3"> Сделать расклад </string>

    <string name="card1"> Описание: </string>
    <string name="card2"> Совет карты: </string>
    <string name="card3"> Важно! </string>

    <string-array name="categories">
        <item>Любовь</item>
        <item>Деньги</item>
        <item>Карьера</item>
        <item>Здоровье</item>
        <item>Духовность</item>
    </string-array>

    <string name="spread1"> Разложить карты </string>
    <string name="spread2"> Рзультат: </string>

    <string name="horoscope1"> Гороскоп </string>
    <string name="horoscope2"> Выберите ваш знак зодиака: </string>
    <string-array name="ZZ">
        <item>Выберите знак зодиака</item>
        <item>Овен</item>
        <item>Телец</item>
        <item>Близнецы</item>
        <item>Рак</item>
        <item>Лев</item>
        <item>Дева</item>
        <item>Весы</item>
        <item>Скорпион</item>
        <item>Стрелец</item>
        <item>Козерог</item>
        <item>Водолей</item>
        <item>Рыбы</item>
    </string-array>
    <string name="horoscope3"> Твой день под влиянием звёзд </string>
    <string name="horoscope4"> Послание </string>
    <string name="horoscope5"> Совет дня </string>

    <string name="matrix1"> Рассчет матрицы </string>
    <string name="matrix2"> Матрица судьбы — нумерологическая система из 22 арканов. По дате рождения рассчитываются числа, каждое описывает ваши таланты, задачи и зоны роста. </string>
    <string name="matrix3"> Введите дату рождения (ДД.ММ.ГГГГ) </string>
    <string name="matrix4"> Рассчитать </string>
    <string name="matrix_1"> Характер </string>
    <string name="matrix_2"> Отношения с родителями </string>
    <string name="matrix_3"> Талант </string>
    <string name="matrix_4"> Финансы </string>
    <string name="matrix_5"> Сфера заработка </string>
    <string name="matrix_6"> Идеальный партнер </string>
    <string name="matrix_7"> Кармический хвост </string>
    <string name="matrix_8"> Духовная карма по роду </string>
    <string name="matrix_9"> Материальная карма по роду </string>

    <string name="test_1"> Тестирование </string>
    <string name="test_2"> Хочешь узнать о себе больше? Выбери любой тест, ответь на несколько вопросов и сможешь понять себя лучше! </string>
    <string name="test_3"> Какая ты ведьма? </string>
    <string name="test_4"> Этот тест поможет вам понять, к какому типу ведьм вы ближе по духу и характеру. Узнайте, какая магия откликается именно вам! </string>
    <string name="test_5"> Пройти </string>
    <string name="test_6"> Какой твой камень? </string>
    <string name="test_7"> Пройдя этот тест, вы узнаете, какой природный камень станет вашим личным оберегом и талисманом. Откройте для себя то, что усилит ваши сильные стороны и принесёт удачу. </string>

    <string name="w_2"> Вперед </string>
    <string name="w_3"> Назад </string>
    <string name="w_4"> Пройти ещё раз </string>

    <string name="ball_1"> Шар предсказаний </string>
    <string name="ball_2"> Шёпотом задай свой вопрос, а магический шар откроет тайну. </string>
    <string name="ball_3"> Спросить у шара </string>

    <string name="comp_1"> Совместимость </string>
    <string name="comp_2"> Милашка, хочешь проверить свою совместимость? Выбери свою дату рождения и дату рождения партнера, тогда узнаешь всю правду о вашем союзе... </string>
    <string name="comp_3"> Выбери свою дату рождения: </string>
    <string name="comp_4"> Выбери дату рождения партнера: </string>
    <string name="comp_5"> Ваша совместимость: </string>
    <string name="comp_6"> Рассчитать </string>

    <string name="prof_1"> Мой профиль </string>
    <string name="prof_2"> Логин </string>
    <string name="prof_3"> Почта </string>
    <string name="prof_4"> Знак зодиака </string>
    <string name="prof_btn_1"> Редактировать профиль </string>
    <string name="prof_btn_2"> Сменить язык (ru/en) </string>
    <string name="prof_btn_3"> Избранное </string>
    <string name="prof_btn_4"> О приложении </string>
    <string name="prof_btn_5"> Выйти из аккаунта </string>
    <string name="prof_6">    Приложение «Гадалка» создано для всех, кто интересуется магией, мистикой и саморазвитием. Оно позволяет получать предсказания и гадания на разные темы, проходить эзотерические тесты и выполнять магические расчёты, а также изучать статьи из нашей библиотеки*.
 *Статьи, размещённые в приложении, публикуются с разрешения правообладателей и основаны на оригинальных источниках. Мы уважаем авторские права и соблюдаем условия их использования.
 Приложение разработано с использованием современных технологий для мобильных устройств, обеспечивая удобный интерфейс, безопасную работу с данными и возможность офлайн-доступа к ключевым функциям. «Гадалка» помогает пользователям развивать интуицию, получать вдохновение и расширять свои знания о мистических практиках, сочетая обучение с увлекательным взаимодействием и персонализированными предсказаниями </string>
    <string name="prof_5"> © 2026 VKKL. Все права защищены </string>

    <string name="app_name"> Soothsayer </string>
</resources>