<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/f_bartop" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/marckscriptregular"
        android:gravity="center"
        android:text="@string/taro1"
        android:textColor="@color/darkblue"
        android:textSize="32sp" />

    <!-- Нижняя навигация -->
    <TextView
        android:layout_width="383dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/jejumyeongjoregular"
        android:justificationMode="inter_word"
        android:text="@string/taro2"
        android:textColor="@color/darkblue"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="543dp"
        android:layout_weight="1"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/t_fon"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/marckscriptregular"
                    android:text="@string/tarok1"
                    android:textColor="@color/text"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:fontFamily="@font/jejumyeongjoregular"
                    android:justificationMode="inter_word"
                    android:text="@string/tarok2"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCardDay"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/lightviolet"
                    android:fontFamily="@font/marckscriptregular"
                    android:text="@string/tarok3"
                    android:textColor="@color/text"
                    android:textSize="24sp"
                    app:strokeColor="@color/white"
                    app:strokeWidth="2dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/t_fon"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/marckscriptregular"
                    android:text="@string/taror1"
                    android:textColor="@color/text"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:fontFamily="@font/jejumyeongjoregular"
                    android:justificationMode="inter_word"
                    android:text="@string/taror2"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSpread"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/lightviolet"
                    android:fontFamily="@font/marckscriptregular"
                    android:text="@string/taror3"
                    android:textColor="@color/text"
                    android:textSize="24sp"
                    app:strokeColor="@color/white"
                    app:strokeWidth="2dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        style="@style/NoRippleBottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:itemBackground="@android:color/transparent"
        app:itemIconSize="32dp"
        app:itemIconTint="@color/nav_icon_selector"
        app:itemTextColor="@color/nav_icon_selector"
        app:menu="@menu/bottom_nav_menu" />

</LinearLayout>