<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/f_bartop" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/marckscriptregular"
        android:gravity="center"
        android:text="@string/test_1"
        android:textColor="@color/darkblue"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/testLogo"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/test_logo"/>

        <FrameLayout
            android:layout_width="270dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/testText"
                android:layout_width="270dp"
                android:layout_height="130dp"
                android:src="@drawable/test_text" />

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="248dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="33dp"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/jejumyeongjoregular"
                android:justificationMode="inter_word"
                android:text="@string/test_2"
                android:textColor="@color/darkblue"
                android:textSize="16sp" />

        </FrameLayout>
    </LinearLayout>


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:padding="10dp">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="240dp"
               android:layout_marginBottom="20dp"
               android:background="@drawable/t_fon"
               android:orientation="vertical"
               android:padding="10dp">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="25dp"
                   android:layout_gravity="center"
                   android:layout_marginTop="10dp"
                   android:layout_weight="1"
                   android:fontFamily="@font/marckscriptregular"
                   android:text="@string/test_3"
                   android:textColor="@color/darkblue"
                   android:textSize="30sp" />

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="0dp"
                   android:layout_weight="2"
                   android:fontFamily="@font/jejumyeongjoregular"
                   android:justificationMode="inter_word"
                   android:text="@string/test_4"
                   android:textColor="@color/white"
                   android:textSize="18sp" />

               <com.google.android.material.button.MaterialButton
                   android:id="@+id/btnTestWitch"
                   android:layout_width="300dp"
                   android:layout_height="50dp"
                   android:layout_gravity="center_horizontal"
                   android:backgroundTint="@color/lightblue"
                   android:fontFamily="@font/marckscriptregular"
                   android:text="@string/test_5"
                   android:textColor="@color/darkblue"
                   android:textSize="24sp"
                   app:strokeColor="@color/white"
                   app:strokeWidth="2dp" />

           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="252dp"
               android:layout_marginBottom="20dp"
               android:background="@drawable/t_fon"
               android:orientation="vertical"
               android:padding="10dp">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="25dp"
                   android:layout_gravity="center"
                   android:layout_marginTop="10dp"
                   android:layout_weight="1"
                   android:fontFamily="@font/marckscriptregular"
                   android:text="@string/test_6"
                   android:textColor="@color/darkblue"
                   android:textSize="30sp" />

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="0dp"
                   android:layout_weight="2"
                   android:fontFamily="@font/jejumyeongjoregular"
                   android:justificationMode="inter_word"
                   android:text="@string/test_7"
                   android:textColor="@color/white"
                   android:textSize="18sp" />

               <com.google.android.material.button.MaterialButton
                   android:id="@+id/btnTestStone"
                   android:layout_width="300dp"
                   android:layout_height="50dp"
                   android:layout_gravity="center_horizontal"
                   android:backgroundTint="@color/lightblue"
                   android:fontFamily="@font/marckscriptregular"
                   android:text="@string/test_5"
                   android:textColor="@color/darkblue"
                   android:textSize="24sp"
                   app:strokeColor="@color/white"
                   app:strokeWidth="2dp" />

           </LinearLayout>
       </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        style="@style/NoRippleBottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:itemBackground="@android:color/transparent"
        app:itemIconSize="32dp"
        app:itemIconTint="@color/nav_icon_selector"
        app:itemTextColor="@color/nav_icon_selector"
        app:menu="@menu/bottom_nav_menu" />

</LinearLayout>